# MemeTraderPro

./: README.md  app.py  data_processor.py  kucoin_api.py  model_trainer.py  pyproject.toml  trading_logic.py  utils.py
attached_assets/: content-1742510564312.md
models/: DOGE_USDT_model.joblib  README.md
